Fix issue icon alignment CSS

--- a/src/NetworkOptimizer.Web/wwwroot/css/app.css
+++ b/src/NetworkOptimizer.Web/wwwroot/css/app.css
@@ -1708,7 +1708,7 @@ select.form-control {
     flex-shrink: 0;
     display: flex;
     align-items: flex-start;
-    padding-top: 0.125rem;
+    margin-top: 18px;
     width: 24px;
     min-height: 24px;
 }
@@ -1724,7 +1724,6 @@ select.form-control {
 
 .issue-item.issue-info .issue-icon {
     color: var(--info-color);
-    padding-top: 0.25rem;
 }
 
 .issue-body {
@@ -1917,7 +1916,7 @@ select.form-control {
 .issue-type-icon {
     display: flex;
     align-items: flex-start;
-    padding-top: 0.125rem;
+    margin: auto 0;
     width: 24px;
     min-height: 24px;
     flex-shrink: 0;
@@ -1938,7 +1937,6 @@ select.form-control {
 
 .issue-type-group.issue-info .issue-type-icon {
     color: var(--info-color);
-    padding-top: 0.25rem;
 }
 
 .issue-type-body {
